Add to cart feature

--- a/Areas/Admin/Views/Cameras/Edit.cshtml
+++ b/Areas/Admin/Views/Cameras/Edit.cshtml
@@ -53,7 +53,7 @@
 		<div class="other-buttons">
 			<button type="button" class="btn btn-outline-secondary" id="js-addNewInputFileTagButton">Thêm ảnh</button>
 		</div>
-		<button type="submit" class="btn btn-primary">Tạo mới</button>
+		<button type="submit" class="btn btn-primary">Chỉnh sửa</button>
 	</form>
 </div>
 <partial name="~/Views/Shared/_ValidationScriptsPartial.cshtml" />
