--- a/Areas/User/Views/Shared/_Layout.cshtml
+++ b/Areas/User/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
         </div>
     </div>
     <!-- Humberger End -->
-    <partial name="../Shared/_UserHeaderPartial.cshtml" />
+    <vc:user-header></vc:user-header>
     <!-- Begin Main-->
     <div class="container" style="padding-left: 0px; padding-right: 0px">
         <main role="main" class="pb-3">
