--- a/Views/Shared/Components/UserHeader/Default.cshtml
+++ b/Views/Shared/Components/UserHeader/Default.cshtml
@@ -70,7 +70,7 @@
                                     <p>Preview Cart</p>
                                 </div>
                                 @foreach (CartModel item in ViewBag.Carts) {
-                                    <div class="item d-flex flex-row align-items-center justify-content-between">
+                                    <div class="item d-flex flex-row align-items-center justify-content-between p-2">
                                         <a href="User/Shop/Details/?cameraId=@item.Camera.Id">
                                             <div class="d-flex flex-row align-items-center">
                                                 <div class="cart-item__info">
