--- a/Areas/User/Views/Shop/Cart.cshtml
+++ b/Areas/User/Views/Shop/Cart.cshtml
@@ -36,7 +36,7 @@
                                     <td class="shoping__cart__quantity">
                                         <div class="quantity">
                                             <div class="pro-qty">
-                                                <input type="text" value="1">
+                                                <input type="text" value="@item.Amount">
                                             </div>
                                         </div>
                                     </td>
